deploy/k8s/common/prom-svc-nodeports.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-nodeport
spec:
  type: NodePort
  ports:
  - name: web
    port: 9090
    nodePort: 30090
    protocol: TCP
  selector:
    app.kubernetes.io/name: prometheus
    operator.prometheus.io/name: promstack-kube-prometheus-prometheus
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-nodeport
spec:
  type: NodePort
  ports:
  - name: web
    port: 3000
    nodePort: 30030
    protocol: TCP
  selector:
    app.kubernetes.io/instance: promstack
    app.kubernetes.io/name: grafana
